--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="./Assets/style.css">
     <title>Weather Dashboard</title>
 </head>
 
 <body>
-<h1>Weather Forecast</h1>
+<h1 class="display-4 text-center header-bg">Weather Forecast</h1>
 <p>Search for a city:</p>
 <input type="search">
 <button>Search</button>
