--- a/index.html
+++ b/index.html
@@ -11,18 +11,19 @@
 
 <body>
     <h1 class="display-4 text-center header-bg">Weather Forecast</h1>
-
     <div>
-        <form class="d-flex flex-column align-items-center" onsubmit="">
+        <form class="d-flex flex-column align-items-center" id="search-form">
             <label for="search-query">Search for a city:</label>
-            <input type="search" class="mt-2" id="search-input">
-            <button type="button" class="mt-2 btn btn-outline-primary" id="search-btn">Search</button>
+            <input type="search" class="mt-2" id="search-input" placeholder="City Name">
+            <button type="submit" class="mt-2 btn btn-outline-primary">Search</button>
         </form>
+        <div id="list-card">
+            <ul id="saved-list"></ul>
+        </div>
     </div>
-    <div id="saved-list"></div>
     <hr/>
 
-    <div id="card"></div>
+    <div id="weather-card"></div>
 
     <script src="./Assets/script.js"></script>
 </body>
