--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
 
 <body>
     <h1 class="display-4 text-center header-bg">Weather Forecast</h1>
-    <div>
-        <form class="d-flex flex-column align-items-center" id="search-form">
-            <label for="search-query">Search for a city:</label>
-            <input type="search" class="mt-2" id="search-input" placeholder="City Name">
-            <button type="submit" class="mt-2 btn btn-outline-primary">Search</button>
-        </form>
-        <div id="list-card">
-            <ul id="saved-list"></ul>
+    <div class="row">
+        <div class="col-md-3 mt-2">
+            <form class="form-card d-flex flex-column align-items-center" id="search-form">
+                <label for="search-query">Search for a city:</label>
+                <input type="search" class="mt-2" id="search-input" placeholder="City Name">
+                <button type="submit" class="mt-2 btn btn-outline-primary">Search</button>
+            </form>
+            <div id="list-card">
+                <ul class="d-flex flex-column align-items-center" id="saved-list"></ul>
+            </div>
         </div>
+
+        <div class="col-md-9" id="weather-card"></div>
     </div>
-    <hr/>
-
-    <div id="weather-card"></div>
-
     <script src="./Assets/script.js"></script>
 </body>
 </html>
