--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="./Assets/style.css">
+    <link rel="stylesheet" href="./Assets/css/style.css">
     <title>Weather Dashboard</title>
 </head>
 
@@ -22,9 +22,8 @@
                 <ul class="d-flex flex-column align-items-center" id="saved-list"></ul>
             </div>
         </div>
-
         <div class="col-md-9" id="weather-card"></div>
     </div>
-    <script src="./Assets/script.js"></script>
+    <script src="./Assets/js/script.js"></script>
 </body>
 </html>
